[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Characters/CharactersController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/AttackHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/Game/background.png" type="Texture" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.792157, 0.768627, 0.996078, 1 )
position = Vector2( 158, 321 )
scale = Vector2( 1.62, 4.55714 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Positions" type="Node2D" parent="."]

[node name="Team1" type="Node2D" parent="Positions"]

[node name="Position2D" type="Position2D" parent="Positions/Team1"]
position = Vector2( 72, 384 )

[node name="Position2D2" type="Position2D" parent="Positions/Team1"]
position = Vector2( 160, 408 )

[node name="Position2D3" type="Position2D" parent="Positions/Team1"]
position = Vector2( 248, 384 )

[node name="Team2" type="Node2D" parent="Positions"]

[node name="Position2D4" type="Position2D" parent="Positions/Team2"]
position = Vector2( 74, 194 )

[node name="Position2D5" type="Position2D" parent="Positions/Team2"]
position = Vector2( 162, 178 )

[node name="Position2D6" type="Position2D" parent="Positions/Team2"]
position = Vector2( 250, 194 )

[node name="CharactersController" parent="." instance=ExtResource( 2 )]

[node name="AttackHandler" parent="." instance=ExtResource( 3 )]

[node name="UI" parent="." instance=ExtResource( 4 )]
[connection signal="end_round" from="CharactersController" to="." method="end_round"]
[connection signal="attacks_ended" from="AttackHandler" to="." method="attacks_ended"]
